# BFSMazeSolver

./: README.MD  README.md  main.py  pyproject.toml
bfs_maze_solver/: Maze.py  MazeFormatter.py  MazePoint.py  MazeReader.py  MazeSolver.py  MazeSolverGUI.py  MazeSolverLogic.py  __init__.py  main.py
example/: maze.txt
src/: Maze.py  MazeFormatter.py  Solver.py
